Add updates for external app support

--- a/index.html
+++ b/index.html
@@ -25,5 +25,11 @@
   </div>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+<script src="http://localhost:8042/dashboard/auth/v1/auth.js"></script>
 <script src="script.js"></script>
+<script>
+  $(function() {
+    var singly = $.singly({appName: 'Simple Search'});
+  });
+</script>
 </html>
