--- a/public.html
+++ b/public.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Search</title>
+    <title>Simple Search</title>
     <link rel="stylesheet" href="style.css" type="text/css" media="screen" charset="utf-8">
   </head>
 
